[project]
name = "les-1"
version = "0.1.0"
description = "inleveropdracht les-1"
authors = [
    {name = "Koen Reuver",email = "k.reuver@vechtstromen.nl"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
